# model-based-pde-control

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
pdecontrol/: callbacks.py  visualize.py
pdecontrol/architectures/: __init__.py  autoreg.py  delay.py  latent.py
pdecontrol/mbrl/: callbacks.py  mbrl.py  replay.py  script.py  types.py  utils.py  worker.py
pdecontrol/mbrl/world/: world.py  wrappers.py
pdecontrol/sac/: policies.py  sac.py
pdecontrol/surrogates/: factory.py  surrogate.py  training.py  transition.py  utils.py
pdecontrol/surrogates/common/: datamodule.py  dataset.py  schedulers.py
pdecontrol/surrogates/evaluation/: evaluate.py  generate.py
pdecontrol/surrogates/models/: cnn.py  fcnn.py
pdecontrol/surrogates/phyloss/: phyloss.py
pdegym/: __init__.py  visual.py
pdegym/common/: transforms.py  vec_wrappers.py  wrappers.py
pdegym/kuramoto/: __init__.py  kuramoto.py
runscripts/: capacity.sh  offline.sh
