[tool.poetry]
name = "pdecontrol"
version = "0.1.0"
description = ""
authors = ["stwerner97 <stefanwerner1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = "1.10.1"
torchvision = "0.11.2"
matplotlib = "3.5.1"
gym = "0.25.2"
pytorch-lightning = "1.7.2"
pandas = "^2.0"
scikit-learn = "^1.3.2"
tabulate = "^0.9.0"
munch = "^4.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
